tests/int/use_command/snapshots/integration__int__use_command__visibility__modules_visibility__pub_mod_vis_e.snap
---
source: tests/int/use_command/visibility.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - "visibility::pub_mod"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module

----- stderr -----
