tests/int/use_command/snapshots/integration__int__use_command__visibility__modules_visibility__pub_mod_vis_r_e_grouped.snap
---
source: tests/int/use_command/visibility.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - "visibility::pub_mod"
    - "-r"
    - "-e"
    - "--grouped"
---
success: true
exit_code: 0
----- stdout -----
visibility::pub_mod
 - crate::file_module

----- stderr -----
