tests/int/use_command/snapshots/integration__int__use_command__visibility__modules_visibility__pub_super_mod_vis_r.snap
---
source: tests/int/use_command/visibility.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - "visibility::pub_super_mod"
    - "-r"
---
success: true
exit_code: 0
----- stdout -----
crate::dir_module::greet

----- stderr -----
